--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,4 +25,5 @@ jobs:
             "repo": "gh-deploy",
             "ref": "main",
             "environment": "qa",
+            "required_contexts": [],
           });
