--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,10 +20,11 @@ jobs:
     - uses: actions/github-script@v4.0.2
       with:
         script: |
-          github.repos.createDeployment({
+          const result = github.repos.createDeployment({
             "owner": "snarky",
             "repo": "gh-deploy",
             "ref": "main",
             "environment": "qa",
             "required_contexts": [],
           });
+          console.log(result)
