--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,7 @@ jobs:
           .
     - uses: actions/github-script@v4.0.2
       with:
+        github-token: ${{secrets.GH_TOKEN}}
         script: |
           const result = await github.repos.createDeployment({
             "owner": "snarky",
