--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -9,4 +9,6 @@ jobs:
     - run: |
         echo "HELLO"
         env
-        echo ${{fromJSON(github.event)}}
+      env:
+       TOTO: ${{fromJSON(github.event)}}
+      
