--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -10,5 +10,4 @@ jobs:
         echo "HELLO"
         env
       env:
-       TOTO: ${{fromJSON(github.event)}}
-      
+       TOTO: "${{fromJSON(github.event)}}"      
