--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -2,11 +2,15 @@ on:
   deployment:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - run: |
         echo "HELLO"
         env
+        echo "APP_NAME: HELLO"
+        echo "APP_VERSION: 0.1.0"
         echo "HELM CHART VERSION: $(jq -r '.deployment.payload.helm_chart_version' "${GITHUB_EVENT_PATH}")"
+        echo "ENVIRONMENT: ${{ github.event.deployment.payload.helm_chart_version }}"
+        
