--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -8,9 +8,13 @@ jobs:
     - uses: actions/checkout@v2
     - run: |
         echo "HELLO"
+        echo "--"
         env
+        echo "--"
+        echo "HELM CHART VERSION: $(jq -r '.' "${GITHUB_EVENT_PATH}")"
+        echo "--"
         echo "APP_NAME: HELLO"
         echo "APP_VERSION: 0.1.0"
-        echo "HELM CHART VERSION: $(jq -r '.deployment.payload.helm_chart_version' "${GITHUB_EVENT_PATH}")"
-        echo "ENVIRONMENT: ${{ github.event.deployment.payload.helm_chart_version }}"
+        echo "HELM CHART VERSION: ${{ github.event.deployment.payload.helm_chart_version }}"
+        echo "ENVIRONMENT: ${{ github.event.deployment.environment }}"
         
