--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,14 +33,26 @@ jobs:
         echo "ENVIRONMENT: ${{ github.event.deployment.environment }}"
         sleep 30
         echo "Done!"
-        
-    - uses: actions/github-script@v4.0.2
+        exit "$(shuf -i 0-1 -n 1)"
+
+    - name: Update Deployment Status
+      if: always()
+      uses: octokit/request-action@v2.x
       with:
-        github-token: ${{secrets.GH_TOKEN}}
-        script: |
-          const result = await github.repos.createDeploymentStatus({
-            "owner": "snarky",
-            "repo": "gh-deploy",
-            "deployment_id": "${{ github.event.deployment.id }}",
-            "state": "failure",
-          });
+        route: POST /repos/:repository/deployments/:deployment_id/statuses
+        repository: ${{ github.repository }}
+        deployment_id: ${{ github.event.deployment.id }}
+        mediaType: '{"previews": ["ant-man", "flash"]}'
+        state: failure
+        environment_url: 'https://hello-uat.bc.com'
+
+    #- uses: actions/github-script@v4.0.2
+    #  with:
+    #    github-token: ${{secrets.GH_TOKEN}}
+    #    script: |
+    #      const result = await github.repos.createDeploymentStatus({
+    #        "owner": "snarky",
+    #        "repo": "gh-deploy",
+    #        "deployment_id": "${{ github.event.deployment.id }}",
+    #        "state": "failure",
+    #      });
