--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -60,6 +60,9 @@ jobs:
             "environment": "qa",
             "required_contexts": [],
             "payload": {
+              "application_name": 'toto'
+              "environment": 'qa'
+              "helm_chart": 'toto'
               "helm_chart_version": `${HELM_CHART_VERSION}`
             }
           });
