--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,8 @@ jobs:
     # TRIGGER DEPLOYMENT
     - uses: actions/github-script@v4.0.2
       env:
-        HELM_CHART_VERSION: "0.1.0"
+        APPLICATION_VERSION: "0.1.0"
+        HELM_CHART_VERSION: "0.1.1"
       with:
         github-token: ${{secrets.GH_TOKEN}}
         script: |
@@ -61,7 +62,7 @@ jobs:
             "required_contexts": [],
             "payload": {
               "application_name": 'toto'
-              "environment": 'qa'
+              "application_version": `${APPLICATION_VERSION}`
               "helm_chart": 'toto'
               "helm_chart_version": `${HELM_CHART_VERSION}`
             }
