--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,8 @@
 on:
   deployment:
 
-name: "Deploy '${{ github.event.deployment.payload.application_name }} on '${{ github.event.deployment.environment }}' environment"
+#name: "Deploy '${{ github.event.deployment.payload.application_name }} on '${{ github.event.deployment.environment }}' environment"
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
