--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,7 +41,7 @@ jobs:
         
     - name: "Deploy '${{ github.event.deployment.payload.application_name }}:${{ github.event.deployment.payload.application_version }}' (helm: '${{ github.event.deployment.payload.helm_chart }}:${{ github.event.deployment.payload.helm_chart_version }}') on '${{ github.event.deployment.environment }}' environment" 
       run: |
-        dfdf
+        echo "dfdf"
         
     # exit "$(shuf -i 0-1 -n 1)"
 
