--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,8 +2,8 @@ on:
   push:
     branches:
     - $default-branch
-    tags:
-    - '[0-9]+.[0-9]+.[0-9]+'
+    #tags:
+    #- '[0-9]+.[0-9]+.[0-9]+'
   
 jobs:
   check-requirements:
