--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,7 @@
 on:
   push:
-    branches:
-    - $default-branch
+    #branches:
+    #- $default-branch
     #tags:
     #- '[0-9]+.[0-9]+.[0-9]+'
   
