--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,10 +28,10 @@ jobs:
         set -x
         echo '---'
         git rev-parse HEAD
-        git describe --abbrev=0 --tags
-        git rev-list -n 1 "$(git describe --abbrev=0 --tags)"
+        git describe --abbrev=0 --tags || true
+        git rev-list -n 1 "$(git describe --abbrev=0 --tags || true)"
         echo '---'
-        APP_ENVIRONMENT_GROUP=$([[ "$(git rev-parse HEAD)" == "$(git rev-list -n 1 "$(git describe --abbrev=0 --tags)")" ]] && echo 'preprod' || echo 'uat')
+        APP_ENVIRONMENT_GROUP=$([[ "$(git rev-parse HEAD)" == "$(git rev-list -n 1 "$(git describe --abbrev=0 --tags || true)")" ]] && echo 'preprod' || echo 'uat')
         echo ::set-output name=app_env_group::${APP_ENVIRONMENT_GROUP}
         echo ::set-output name=app_envs::$(jq --arg APP_ENVIRONMENT_GROUP "${APP_ENVIRONMENT_GROUP}" -ncr '[{"uat": ["uat", "uat2"], "preprod": ["preprod", "staging"]}] | .[0][$APP_ENVIRONMENT_GROUP]')
   build:
