--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,8 +28,8 @@ jobs:
         set -x
         echo '---'
         git rev-parse HEAD
-        git describe --abbrev=0 --tags || true
-        git rev-list -n 1 "$(git describe --abbrev=0 --tags || true)"
+        git describe --abbrev=0 --tags > /dev/null 2>&1 || true
+        git rev-list -n 1 "$(git describe --abbrev=0 --tags || true)" > /dev/null 2>&1
         echo '---'
         APP_ENVIRONMENT_GROUP=$([[ "$(git rev-parse HEAD)" == "$(git rev-list -n 1 "$(git describe --abbrev=0 --tags || true)")" ]] && echo 'preprod' || echo 'uat')
         echo ::set-output name=app_env_group::${APP_ENVIRONMENT_GROUP}
