--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,8 @@ jobs:
       app_env_group: ${{ steps.define-env.outputs.app_env_group }}
     steps:
     - uses: actions/checkout@v2
-      fetch-depth: 0
+      with:
+        fetch-depth: 0
 
     - id: analyze-package-json
       run: |
