--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,7 @@ jobs:
       app_version: ${{ steps.analyze-package-json.outputs.version }}
       app_envs: ${{ steps.define-env.outputs.app_envs }}
       app_env_group: ${{ steps.define-env.outputs.app_env_group }}
+      app_ids: ${{ steps.define-apps.outputs.app_ids }}
     steps:
     - uses: actions/checkout@v2
       with:
@@ -24,13 +25,29 @@ jobs:
         # echo ::set-output name=version::$(cat package.json | jq -r -c '.version')
         echo ::set-output name=name::toto
         echo ::set-output name=version::0.1.0
+        
+    - id: define-apps
+      run: |
+        echo ::set-output name=app_ids::["app1", "app2", "app3"]
 
     - id: define-env
       run: |
         APP_ENVIRONMENT_GROUP=$([[ "$(git rev-parse HEAD)" == "$(git rev-list -n 1 "$(git describe --abbrev=0 --tags || true)")" ]] && echo 'preprod' || echo 'uat')
         echo ::set-output name=app_env_group::${APP_ENVIRONMENT_GROUP}
         echo ::set-output name=app_envs::$(jq --arg APP_ENVIRONMENT_GROUP "${APP_ENVIRONMENT_GROUP}" -ncr '[{"uat": ["uat", "uat2"], "preprod": ["preprod", "staging"]}] | .[0][$APP_ENVIRONMENT_GROUP]')
-  build:
+  #build:
+  #  runs-on: ubuntu-latest
+  #  needs: check-requirements
+  #  #concurrency:
+  #  #  group: "gh-deploy-a"
+  #  #  cancel-in-progress: false
+  #  steps:
+  #  - uses: actions/checkout@v2
+  #  - run: |
+  #      echo "Build"
+
+  build_app1:
+    if: ${{ contains(needs.check-requirements.outputs.app_ids.*, 'app1') }}
     runs-on: ubuntu-latest
     needs: check-requirements
     #concurrency:
@@ -39,21 +56,22 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: |
-        echo "Build"
+        echo "Build app1"
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [check-requirements, build]
-    # Check if node_versions matrix is not empty to avoid error message:
-    # "Error when evaluating 'strategy' for job '?'. (Line: ?, Col: ?): Matrix vector '?' does not contain any values"
-    if: ${{ needs.check-requirements.outputs.app_envs != '[]' }}
-    strategy:
-      matrix:
-        app_env: ${{ fromJson(needs.check-requirements.outputs.app_envs) }}
-    steps:
-    - uses: actions/checkout@v2
-    - run: |
-        echo "Deploy: ${{ matrix.app_env }}"
+
+  #deploy:
+  #  runs-on: ubuntu-latest
+  #  needs: [check-requirements, build]
+  #  # Check if node_versions matrix is not empty to avoid error message:
+  #  # "Error when evaluating 'strategy' for job '?'. (Line: ?, Col: ?): Matrix vector '?' does not contain any values"
+  #  if: ${{ needs.check-requirements.outputs.app_envs != '[]' }}
+  #  strategy:
+  #    matrix:
+  #      app_env: ${{ fromJson(needs.check-requirements.outputs.app_envs) }}
+  #  steps:
+  #  - uses: actions/checkout@v2
+  #  - run: |
+  #      echo "Deploy: ${{ matrix.app_env }}"
 
     # DOCKER IMAGE
     #- run: |
