--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,7 +47,7 @@ jobs:
   #      echo "Build"
 
   build_app1:
-    if: ${{ contains(needs.check-requirements.outputs.app_ids.*, 'app1') }}
+    if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app1') }}
     runs-on: ubuntu-latest
     needs: check-requirements
     #concurrency:
