--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,7 +28,7 @@ jobs:
         
     - id: define-apps
       run: |
-        echo ::set-output name=app_ids::["app1", "app2", "app3"]
+        echo ::set-output name=app_ids::["app1", "app2"]
 
     - id: define-env
       run: |
@@ -57,6 +57,30 @@ jobs:
     - uses: actions/checkout@v2
     - run: |
         echo "Build app1"
+  
+  build_app2:
+    if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app2') }}
+    runs-on: ubuntu-latest
+    needs: check-requirements
+    #concurrency:
+    #  group: "gh-deploy-a"
+    #  cancel-in-progress: false
+    steps:
+    - uses: actions/checkout@v2
+    - run: |
+        echo "Build app2"
+    
+  build_app3:
+    if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app3') }}i
+    runs-on: ubuntu-latest
+    needs: check-requirements
+    #concurrency:
+    #  group: "gh-deploy-a"
+    #  cancel-in-progress: false
+    steps:
+    - uses: actions/checkout@v2
+    - run: |
+        echo "Build app3"
 
 
   #deploy:
