--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,10 +49,7 @@ jobs:
   build_app1:
     if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app1') }}
     runs-on: ubuntu-latest
-    needs: check-requirements
-    #concurrency:
-    #  group: "gh-deploy-a"
-    #  cancel-in-progress: false
+    needs: [check-requirements]
     steps:
     - uses: actions/checkout@v2
     - run: |
@@ -61,10 +58,7 @@ jobs:
   build_app2:
     if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app2') }}
     runs-on: ubuntu-latest
-    needs: check-requirements
-    #concurrency:
-    #  group: "gh-deploy-a"
-    #  cancel-in-progress: false
+    needs: [check-requirements]
     steps:
     - uses: actions/checkout@v2
     - run: |
@@ -73,15 +67,54 @@ jobs:
   build_app3:
     if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app3') }}
     runs-on: ubuntu-latest
-    needs: check-requirements
-    #concurrency:
-    #  group: "gh-deploy-a"
-    #  cancel-in-progress: false
+    needs: [check-requirements]
     steps:
     - uses: actions/checkout@v2
     - run: |
         echo "Build app3"
 
+  deploy_app1:
+    runs-on: ubuntu-latest
+    needs: [check-requirements, build_app1]
+    # Check if node_versions matrix is not empty to avoid error message:
+    # "Error when evaluating 'strategy' for job '?'. (Line: ?, Col: ?): Matrix vector '?' does not contain any values"
+    if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app1') && needs.check-requirements.outputs.app_envs != '[]' }}
+    strategy:
+      matrix:
+        app_env: ${{ fromJson(needs.check-requirements.outputs.app_envs) }}
+    steps:
+    - uses: actions/checkout@v2
+    - run: |
+        echo "Deploy: app1 on ${{ matrix.app_env }}"
+
+  deploy_app2:
+    runs-on: ubuntu-latest
+    needs: [check-requirements, build_app2]
+    # Check if node_versions matrix is not empty to avoid error message:
+    # "Error when evaluating 'strategy' for job '?'. (Line: ?, Col: ?): Matrix vector '?' does not contain any values"
+    if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app2') && needs.check-requirements.outputs.app_envs != '[]' }}
+    strategy:
+      matrix:
+        app_env: ${{ fromJson(needs.check-requirements.outputs.app_envs) }}
+    steps:
+    - uses: actions/checkout@v2
+    - run: |
+        echo "Deploy: app2 on ${{ matrix.app_env }}"
+        
+
+  deploy_app3:
+    runs-on: ubuntu-latest
+    needs: [check-requirements, build_app3]
+    # Check if node_versions matrix is not empty to avoid error message:
+    # "Error when evaluating 'strategy' for job '?'. (Line: ?, Col: ?): Matrix vector '?' does not contain any values"
+    if: ${{ contains(needs.check-requirements.outputs.app_ids, 'app3') && needs.check-requirements.outputs.app_envs != '[]' }}
+    strategy:
+      matrix:
+        app_env: ${{ fromJson(needs.check-requirements.outputs.app_envs) }}
+    steps:
+    - uses: actions/checkout@v2
+    - run: |
+        echo "Deploy: app3 on ${{ matrix.app_env }}"
 
   #deploy:
   #  runs-on: ubuntu-latest
