--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,7 @@ jobs:
       run: |
         APP_ENVIRONMENT_GROUP=$([[ "$(git rev-parse HEAD)" == "$(git rev-list -n 1 "$(git describe --abbrev=0 --tags || true)")" ]] && echo 'preprod' || echo 'uat')
         echo ::set-output name=app_env_group::${APP_ENVIRONMENT_GROUP}
-        echo ::set-output name=app_envs::$(jq --arg APP_ENVIRONMENT_GROUP "${APP_ENVIRONMENT_GROUP}" -ncr '[{"uat": ["uat", "uat2"], "preprod": ["preprod", "staging"]}] | .[0][$APP_ENVIRONMENT_GROUP]')
+        echo ::set-output name=app_envs::$(jq --arg APP_ENVIRONMENT_GROUP "${APP_ENVIRONMENT_GROUP}" -ncr '[{"uat": ["uat", "uat2", "uat3", "uat4", "uat5", "uat6", "uat7", "uat8", "uat_cn"], "preprod": ["preprod", "staging"]}] | .[0][$APP_ENVIRONMENT_GROUP]')
   #build:
   #  runs-on: ubuntu-latest
   #  needs: check-requirements
