--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -1,10 +1,7 @@
 on:
   workflow_run:
-    workflows: ["Push", "Tag"]
-    branches: [next]
-    types: 
-      - completed
-      - requested
+    workflows: ["Push"]
+
 jobs:
   check-requirements:
     runs-on: ubuntu-latest
