--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -2,6 +2,8 @@ on:
   workflow_run:
     workflows: ["Push", "Tag"]
     branches: [next]
+    types: 
+    - completed
 
 jobs:
   check-requirements:
