--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -14,7 +14,7 @@ jobs:
         # @NOTE: to retrieve last tag
         fetch-depth: 0
     - run: |
-        echo "on.workflow_run => change
+        echo "on.workflow_run => change"
         APP_ENVIRONMENT_GROUP=$([[ "$(git rev-parse HEAD)" == "$(git rev-list -n 1 "$(git describe --abbrev=0 --tags || true)")" ]] && echo 'preprod' || echo 'uat')
         echo ::set-output name=app_env_group::${APP_ENVIRONMENT_GROUP}
         
@@ -23,7 +23,7 @@ jobs:
     needs: [change]
     steps:
     - run: |
-        echo "on.workflow_run => build
+        echo "on.workflow_run => build"
         
   on-failure:
     runs-on: ubuntu-latest
